# vtnet-sample-2025

./: .gitignore  README.md  docker-README.md  docker-compose.prod.yml  docker-compose.yml  steps.txt
.cursor/rules/: core.mdc  java-springboot.mdc  memory-bank.mdc  project-guidelines.mdc  react-typescript.mdc  technical-tutorials.mdc
ai/: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  chainlit-schema.sql  docker-compose.yml  env.example  pyproject.toml
ai/app/: api.py  chainlit.py  consts.py  embed_document.py  main.py  mcp.py  runnable.py  store.py
backend/: .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pom.xml
documents/: 0.overview.md  1.product.md  2.1.userstories_project_management.md  2.2.userstories_document_handling.md  2.3.userstories_intelligent_search_chatbot.md  3.1.techbase.md  3.2.tech_structure.md  3.3.implement_checklist.md  4.checklist_us.2.1.2.md  4.checklist_us.2.1.md  4.checklist_us_2.1.3.md  4.checklist_us_2.1_detail.md  4.checklist_us_2.2.md  4.checklist_us_2.3.md
documents/prototype/: archived-projects.html  document-viewer.html  index.html  project-details.html  project-members.html  user-management.html
documents/testcases/: 5.0.common_testcases.md  5.1.testcases_project_management.md  (+4 more)
frontend/: .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  (+4 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
playwright/: README.md  package.json  playwright.config.ts
(+235 files in other folders)
