[project]
name = "viettel-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.1",
    "asyncpg>=0.30.0",
    "chainlit>=2.5.5",
    "fastapi>=0.115.12",
    "langchain-google-genai>=2.1.4",
    "python-multipart>=0.0.18",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pydantic[email]>=2.11.5",
    "httpx>=0.25.0",
    "ollama>=0.5.0",
    "more-itertools>=10.7.0",
    "langchain-ollama>=0.3.3",
    "langchain>=0.3.25",
    "langgraph>=0.4.7",
    "ipython>=9.3.0",
    "langchain-community>=0.3.25",
    "langchain-postgres>=0.0.13",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-experimental>=0.3.4",
    "pypdf>=5.7.0",
    "psycopg[binary]",
    "langchain-qdrant>=0.2.0",
]
