[project]
name = "viettel-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain-google-genai>=2.1.4",
    "uvicorn>=0.34.2",
    "python-dotenv>=1.0.0",
    "ollama>=0.5.0",
    "more-itertools>=10.7.0",
    "langchain-ollama>=0.3.3",
    "langchain>=0.3.25",
    "langgraph>=0.4.7",
    "langchain-community>=0.3.25",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-experimental>=0.3.4",
    "pypdf>=5.7.0",
    "langchain-qdrant>=0.2.0",
    "watchdog>=6.0.0",
]
